Fix deprecation warning from JDK 11